Начел четвертый экран. Верстка готова, нужны стили

--- a/index.html
+++ b/index.html
@@ -117,5 +117,28 @@
             </div> <!--./colection__inner -->
         </div> <!--./container -->
     </section>
+
+    <section class="registration">
+        <div class="container">
+
+            <!-- <img src="img/registration-left.jpg"  alt="" class="registration__image-left">
+            <img src="img/registration-right.jpg" alt="" class="registration__image-right"> -->
+
+            <div class="registration__inner">
+                <h2 class="registration__title">Запись на дегустацию</h2>
+                <div class="registration__text">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                    Feugiat enim tortor in hac id imperdiet adipiscing. 
+                    Pellentesque nisi, mi sit non sit sed fermentum.
+                 </div>
+                <form action="/" class="registration__form">
+                    <input class="form__name"  type="text" name="name" placeholder="Имя">
+                    <input class="form__phone" type="tel"  name="phon" placeholder="Телефон">
+                    <input class="form__text"  type="text" name="text" placeholder="Бутик на Невском 103">
+                    <button class="btn btn--long" type="submit">записаться</button>
+                </form>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
