Закончил верстку без адаптива

--- a/index.html
+++ b/index.html
@@ -120,11 +120,9 @@
 
     <section class="registration">
         <div class="container">
-
-            <!-- <img src="img/registration-left.jpg"  alt="" class="registration__image-left">
-            <img src="img/registration-right.jpg" alt="" class="registration__image-right"> -->
-
             <div class="registration__inner">
+                <img src="img/registration-left.jpg"  alt="" class="registration__image-left">
+                <img src="img/registration-right.jpg" alt="" class="registration__image-right">
                 <h2 class="registration__title">Запись на дегустацию</h2>
                 <div class="registration__text">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
@@ -138,7 +136,33 @@
                     <button class="btn btn--long" type="submit">записаться</button>
                 </form>
             </div>
-        </div>
+        </div> <!--./container -->
     </section>
+
+    <footer class="footer">
+        <div class="container">
+            <div class="footer__inner">
+                <div class="footer__top">
+                    <a href="#" class="footer__top_item">Главная</a>
+                    <a href="#" class="footer__top_item">Каталог</a>
+                    <a href="#" class="footer__top_item">Поставщики</a>
+                    <a href="#" class="footer__top_item">Коллекции</a>
+                    <a href="#" class="footer__top_item">Дегустация</a>
+                    <a href="#" class="footer__top_item">Коллекция 2020</a>
+                    <a href="#" class="footer__top_item">Контакты</a>
+                </div>
+                <div class="footer__bottom">
+                    <div class="footer__bottom_item vine">винный бутик LE CORTE</div>
+                    <div class="footer__bottom_item">8 (812) 123-45-67</div>
+                    <div class="footer__bottom_item link">
+                        <a href="#" target="_blank"><img src="img/youtube.png"  alt=""></a>
+                        <a href="#" target="_blank"><img src="img/vk.png"       alt=""></a>
+                        <a href="#" target="_blank"><img src="img/facebook.png" alt=""></a>
+                    </div>
+                    <div class="footer__bottom_item">© le-corte.ru</div>
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
